# plugkill

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
crates/plugkill/: Cargo.toml
crates/plugkill-core/: Cargo.toml
crates/plugkill-core/src/: config.rs  error.rs  ipc.rs  lib.rs  lid.rs  network.rs  power.rs  sdcard.rs  state.rs  sysfs.rs  thunderbolt.rs  usb.rs
crates/plugkill-gui/: Cargo.toml
crates/plugkill-gui/src/: main.rs  tray.rs
crates/plugkill-relay/: Cargo.toml
crates/plugkill-relay/src/: config.rs  crypto.rs  listener.rs  main.rs  protocol.rs  resolve.rs  sender.rs  trigger.rs  watcher.rs
crates/plugkill-relay/tests/: integration.rs
crates/plugkill/src/: daemon_state.rs  kill.rs  main.rs  socket.rs
crates/plugkill/tests/: integration.rs
nix/: module.nix  relay-module.nix
src/: config.rs  error.rs  kill.rs  lid.rs  main.rs  network.rs  power.rs  sdcard.rs  socket.rs  state.rs  thunderbolt.rs  usb.rs
tests/: integration.rs
