[package]
name = "plugkill"
version = "0.2.0"
edition = "2021"
description = "Hardware kill-switch daemon — shuts down the system when device changes are detected on USB, Thunderbolt, or SD card buses"
license = "GPL-3.0"
authors = ["plugkill contributors"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal", "fs", "reboot", "user"] }
libc = "0.2"
signal-hook = "0.3"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
nix = { version = "0.29", features = ["user"] }
