[package]
name = "plugkill-core"
version = "0.4.1"
edition = "2024"
description = "Shared types and client library for plugkill"
license = "GPL-3.0"
authors = ["AcidDemon"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
zbus = { version = "5", features = ["blocking"] }

[dev-dependencies]
tempfile = "3"
