[package]
name = "plugkill"
version = "0.4.1"
edition = "2024"
description = "Hardware kill-switch daemon — shuts down the system when device changes are detected on USB, Thunderbolt, SD card buses, AC power removal, network link loss, or lid close"
license = "GPL-3.0"
authors = ["AcidDemon"]

[[bin]]
name = "plugkill"
path = "src/main.rs"

[dependencies]
plugkill-core = { path = "../plugkill-core" }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal", "fs", "reboot", "user"] }
libc = "0.2"
signal-hook = "0.3"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
nix = { version = "0.29", features = ["user"] }
